[package]
name = "urlcode"
version = "1.0.0"
description = "Convinience tool for managing urls from the command line"
authors = ["George Tsiamasiotis <george@tsiamasiotis.gr>"]
license = "MPL-2.0"
repository = "https://github.com/gtsiam/urlcode"
edition = "2024"
readme = "README.md"

[dependencies]
lexopt = "0.3.2"
